...
            app:layout_constraintBottom_toTopOf="@+id/center_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_elections_header">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_elections_recycler"
                listData="@{viewModel.upcomingElections}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/center_guideline"
                app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/center_guideline"
            tools:text="@tools:sample/lorem[31]" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_recycler"
            listData="@{viewModel.savedElections}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
